[gd_scene load_steps=3 format=2]

[ext_resource path="res://ressources/img/items.png" type="Texture" id=1]
[ext_resource path="res://ressources/script/ammu/plane_ammu.gd" type="Script" id=2]

[node name="plane_ammu" type="RigidBody2D"]
collision_layer = 512
collision_mask = 4607
mass = 1.4
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 153, 21, 14, 22 )

[node name="collisionshape2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( -7, 10, -6, 11, 6, 11, 7, 10, 7, -6, 6, -7, 5, -8, 4, -9, 2, -10, 1, -11, -1, -11, -2, -10, -4, -9, -5, -8, -6, -7, -7, -6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 1, -4.54747e-13 )
rotation = -1.5708
scale = Vector2( 0.5, 0.05 )
enabled = true
collision_mask = 49
collide_with_areas = true

[node name="area2D" type="Area2D" parent="."]

[node name="collisionshape2D" type="CollisionPolygon2D" parent="area2D"]
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( -7, 10, -6, 11, 6, 11, 7, 10, 7, -6, 6, -7, 5, -8, 4, -9, 2, -10, 1, -11, -1, -11, -2, -10, -4, -9, -5, -8, -6, -7, -7, -6 )

[connection signal="body_entered" from="." to="." method="_on_plane_ammu_body_entered"]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_exited" from="area2D" to="." method="_on_area2D_body_exited"]
